k8s/fastfood-payment-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastfood-payment-deployment
  labels:
    app: fastfood-payment
spec:
  replicas: 1
  template:
    metadata:
      name: fastfood-payment
      labels:
        app: fastfood-payment
    spec:
      containers:
        - name: fastfood-payment-container
          image: soatpostech/fastfood-payment:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8083
  selector:
    matchLabels:
      app: fastfood-payment
