k8s/fastfood-payment-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: fastfood-payment-service
spec:
  type: LoadBalancer
  selector:
    app: fastfood-payment
  ports:
    - port: 8083
      targetPort: 8083
