k8s/fastfood-payment-deployment-vs.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: fastfood-payment-virtual-service
spec:
  hosts:
    - fastfood-payment-service
  http:
    - route:
        - destination:
            host: fastfood-payment-service
            port:
              number: 8083
